--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   get_it: ^7.7.0
   sqflite: ^2.3.3+1
   path_provider: ^2.1.4
+  firebase_core: ^3.8.1
+  firebase_crashlytics: ^4.2.1
+  firebase_analytics: ^11.3.5
 
 dev_dependencies:
   mockito: ^5.0.8
