--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,7 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
-# Firebase Configuration Files (DO NOT COMMIT!)
+# Firebase Configuration Files
 android/app/google-services.json
 ios/Runner/GoogleService-Info.plist
 firebase_app_id_file.json
