--- a/.gitignore
+++ b/.gitignore
@@ -47,9 +47,9 @@ app.*.map.json
 /android/app/release
 
 # Firebase Configuration Files
-android/app/google-services.json
-ios/Runner/GoogleService-Info.plist
-firebase_app_id_file.json
+# android/app/google-services.json
+# ios/Runner/GoogleService-Info.plist
+# firebase_app_id_file.json
 
 # Gradle related
 .gradle/
